# ChangeLog for app-admin/eselect-rails
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/eselect-rails/ChangeLog,v 1.23 2008/11/27 06:51:23 graaff Exp $

*eselect-rails-0.13 (27 Nov 2008)

  27 Nov 2008; Hans de Graaff <graaff@gentoo.org>
  +eselect-rails-0.13.ebuild:
  Version bump to support the Rails 2.2 SLOT.

  26 Nov 2008; Hans de Graaff <graaff@gentoo.org>
  -eselect-rails-0.10.ebuild, -eselect-rails-0.11.ebuild:
  Remove old versions

  15 Nov 2008; Tobias Scherbaum <dertobi123@gentoo.org>
  eselect-rails-0.12.ebuild:
  ppc stable, bug #237385

  06 Nov 2008; Raúl Porcel <armin76@gentoo.org> eselect-rails-0.12.ebuild:
  ia64 stable wrt #237385

  04 Nov 2008; Brent Baude <ranger@gentoo.org> eselect-rails-0.12.ebuild:
  Marking eselect-rails-0.12 ppc64 for bug 237385

  03 Nov 2008; Markus Meier <maekke@gentoo.org> eselect-rails-0.12.ebuild:
  amd64/x86 stable, bug #237385

  03 Nov 2008; Ferris McCormick <fmccor@gentoo.org>
  eselect-rails-0.12.ebuild:
  Sparc stable, Security Bug #237385.

*eselect-rails-0.12 (17 Jun 2008)

  17 Jun 2008; Hans de Graaff <graaff@gentoo.org>
  +eselect-rails-0.12.ebuild:
  New version that knows about rails 2.1.x

  16 May 2008; nixnut <nixnut@gentoo.org> eselect-rails-0.11.ebuild:
  Stable on ppc wrt bug 221309

  13 May 2008; Raúl Porcel <armin76@gentoo.org> eselect-rails-0.11.ebuild:
  ia64 stable wrt #221309

  12 May 2008; Markus Rothe <corsair@gentoo.org> eselect-rails-0.11.ebuild:
  Stable on ppc64; bug #221309

  11 May 2008; Ferris McCormick <fmccor@gentoo.org>
  eselect-rails-0.11.ebuild:
  Sparc stable, part of Bug #221309.

  11 May 2008; Markus Meier <maekke@gentoo.org> eselect-rails-0.11.ebuild:
  x86 stable, bug #221309

  11 May 2008; Hans de Graaff <graaff@gentoo.org> eselect-rails-0.11.ebuild:
  Stable on amd64, bug #221309

*eselect-rails-0.11 (15 Dec 2007)

  15 Dec 2007; Hans de Graaff <graaff@gentoo.org>
  +eselect-rails-0.11.ebuild: