@@ -1,0 +1,19 @@
+# Copyright 1999-2008 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/app-admin/eselect-rails/Attic/eselect-rails-0.14.ebuild,v 1.1 2008/12/03 06:35:01 graaff Exp $
+
+DESCRIPTION="Manages Ruby on Rails symlinks"
+HOMEPAGE="http://www.gentoo.org/"
+SRC_URI="mirror://gentoo/${P}.tar.bz2"
+
+LICENSE="GPL-2"
+SLOT="0"
+KEYWORDS="~amd64 ~ia64 ~ppc ~ppc64 ~sparc ~x86 ~x86-fbsd"
+IUSE=""
+
+RDEPEND=">=app-admin/eselect-1.0.10"
+
+src_install() {
+	insinto /usr/share/eselect/modules
+	doins *.eselect || die "doins failed"
+}
