@@ -1,6 +1,13 @@
 # ChangeLog for app-admin/eselect-rails
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/eselect-rails/ChangeLog,v 1.23 2008/11/27 06:51:23 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/eselect-rails/ChangeLog,v 1.24 2008/12/03 06:35:01 graaff Exp $
+
+*eselect-rails-0.14 (03 Dec 2008)
+
+  03 Dec 2008; Hans de Graaff <graaff@gentoo.org>
+  +eselect-rails-0.14.ebuild:
+  Version bump: simplify update handling as part of a fix for #221899. Patch by
+  Alex Legler.
 
 *eselect-rails-0.13 (27 Nov 2008)
 
